--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform-origin: 0% 0%; /*posisinya di kiri atas*/
+  transform-origin: 0% 0%; /*posisinya di kiri atas 0=x-axis and y-axis*/
   /* The transform-origin property is used to set the point around which a CSS transformation is applied. For example, when performing a rotate (which you will do later in this project), the transform-origin determines around which point the element is rotated. Give the .line selector a transform-origin property of 0% 0%. This will offset the origin point by 0% from the left and 0% from the top, setting it to the top left corner of the element. */
 }
 
@@ -47,6 +47,39 @@
   height: 20%;
   position: absolute;
   border: 2px solid;
+  transform-origin: 50% 0%; /*do the roration from the middle x-axis on top (so its like top-middle)*/
+  transform: rotate(30deg);
+  /* currently up until here every single cabin is stack on top of each other so the following code will reposition every single on of them */
+}
+
+.cabin:nth-of-type(1) {
+  right: -8.5%;
+  top: 50%;
+}
+
+.cabin:nth-of-type(2) {
+  right: 17%;
+  top: 93.5%;
+}
+
+.cabin:nth-of-type(3) {
+  right: 67%;
+  top: 93.5%;
+}
+
+.cabin:nth-of-type(4) {
+  left: -8.5%;
+  top: 50%;
+}
+
+.cabin:nth-of-type(5) {
+  left: 17%;
+  top: 7%;
+}
+
+.cabin:nth-of-type(6) {
+  right: 17%;
+  top: 7%;
 }
 
 
